<resources>
    <string name="isi_app_name">MovieApp</string>
    <string name="app_name">MovieApp</string>
    <string name="most_popular_txt">MOST POPULAR</string>
    <string name="playing_now_txt">PLAYING NOW</string>
    <string name="titulo_demo_txt">Titulo demo</string>
    <string name="more_txt">more</string>
    <string name="stream_txt">STREAM MÉXICO</string>
    <string name="cast_txt">CAST</string>
    <string name="trailer_txt">(Trailer)</string>
    <string name="up_coming_txt">UP COMING</string>
    <string name="top_txt">TOP</string>
    <string name="movie_app_logo">MOVIE APP</string>
</resources>