<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/MovieAppTheme"
    tools:context=".View.movies.MoviesActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/movie_ic"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/movie_app_logo"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/popular_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/most_popular_txt"
                    android:textColor="@color/white"
                    android:textSize="9pt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/more_popular_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="end"
                    android:layout_marginBottom="10dp"
                    android:text="@string/more_txt"
                    android:visibility="gone"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/white"
                    android:textSize="7pt"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/linear_playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/playing_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playing_now_txt"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="9pt" />

                <TextView
                    android:id="@+id/more_playing_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="end"
                    android:layout_marginBottom="10dp"
                    android:text="@string/more_txt"
                    android:visibility="gone"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/white"
                    android:textSize="7pt"
                    android:textStyle="bold" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/playing_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/linear_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/upcoming_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/up_coming_txt"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="9pt" />

                <TextView
                    android:id="@+id/more_upcoming_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="end"
                    android:layout_marginBottom="10dp"
                    android:text="@string/more_txt"
                    android:visibility="gone"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/white"
                    android:textSize="7pt"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcoming_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/linear_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/top_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_txt"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="9pt" />

                <TextView
                    android:id="@+id/more_top_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="end"
                    android:layout_marginBottom="10dp"
                    android:text="@string/more_txt"
                    android:visibility="gone"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/white"
                    android:textSize="7pt"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>