<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/view_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="40dp"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#171717">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:id="@+id/trailer_btn"
                        android:visibility="gone"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/play_ico"/>

<!--                    <androidx.cardview.widget.CardView-->
<!--                        android:id="@+id/trailer_btn"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        app:cardCornerRadius="10dp"-->
<!--                        android:visibility="visible"-->
<!--                        android:layout_centerInParent="true">-->

<!--                        <LinearLayout-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_alignParentBottom="true"-->
<!--                            android:layout_height="wrap_content">-->

<!--                            <TextView-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:layout_margin="10dp"-->
<!--                                android:text="@string/trailer_txt"/>-->

<!--                        </LinearLayout>-->

<!--                    </androidx.cardview.widget.CardView>-->

                </RelativeLayout>

                <TextView
                    android:id="@+id/trailer_txt_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    android:gravity="center_horizontal"
                    android:text="@string/trailer_txt"/>

                <TextView
                    android:id="@+id/title_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/titulo_demo_txt"
                    android:textColor="@color/white"
                    android:layout_marginBottom="20dp"
                    android:textSize="13pt"
                    android:textStyle="bold"/>


                <TextView
                    android:id="@+id/reseña_txt"
                    android:layout_width="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal"
                    android:text="@string/titulo_demo_txt"/>

                <TextView
                    android:id="@+id/cast_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/cast_txt"
                    android:visibility="gone"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/white"
                    android:textSize="7pt"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cast_recycler"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="15dp"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/Stream_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stream_txt"
                    android:textColor="@color/white"
                    android:textSize="7pt"
                    android:visibility="gone"
                    android:layout_marginStart="15dp"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/provider_recycler"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="15dp"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>